--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="/static/img/website-logo.png" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/styles/footer.css" />
+    <link rel="stylesheet" href="/static/general.css" />
     <title>Footer</title>
   </head>
   <body>
@@ -15,7 +16,6 @@
         <nav class="footer-nav">
           <a href="/privacy" target="_parent">Privacy Policy</a>
           <a href="/terms" target="_parent">Terms of Service</a>
-          <!-- <a href="/contact" target="_parent">Contact Us</a> -->
           <a href="/copyright" target="_parent">Copyright</a>
         </nav>
       </div>
