--- a/templates/terms.html
+++ b/templates/terms.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/general.css" />
     <link rel="stylesheet" href="/static/styles/terms.css" />
-    <title>Document</title>
+    <title>Terms of Service -- LearnifyX</title>
   </head>
 <body>
   <iframe src="/header" id="iframe-header"></iframe>
@@ -57,9 +57,7 @@
     </p>
   </div>
 
-  <div id="footer-container">
-    <iframe src="/footer" id="iframe-footer"></iframe>
-  </div>
+  <iframe src="/footer" id="iframe-footer"></iframe>
 
   <script src="/static/general.js"></script>
 </body>
