--- a/static/general.css
+++ b/static/general.css
@@ -5,6 +5,9 @@
 body {
   padding-top: 60px;
   font-family: sans-serif;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 #iframe-header {
   top: 0px;
@@ -19,7 +22,7 @@ body {
 
 #iframe-footer {
   border: none;
-  width: 100vw;
+  height: 100%;
 }
 
 #reset-link,
