--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -1,21 +1,25 @@
 body {
-  margin: 0px;
+  /* margin: 0px; */
+  margin-left: 0px;
+  margin-right: 0px;
+  padding: 0px;
   font-family: 'Montserrat', sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 #footer {
   background-color: #333; /* Dark background for the footer */
   color: white;
   width: 100%;
-  padding: 20px 0;
   text-align: center;
-  flex-shrink: 0; 
-  position: relative; 
+  height: 100%;
+  overflow: hidden;
 }
 
 .footer-content {
   margin: 0 auto;
-  padding: 0 20px;
+  padding-bottom: 17px;
 }
 
 .footer-nav {
