--- a/static/general.css
+++ b/static/general.css
@@ -8,7 +8,17 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
+
+.container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 #iframe-header {
   top: 0px;
   right: 0px;
