--- a/templates/thank_you.html
+++ b/templates/thank_you.html
@@ -19,7 +19,7 @@
       <iframe src="/header" id="iframe-header"></iframe>
     </div>
 
-    <div class="container">
+    <div class="thank-you-container">
       <h1>Thank you for your order!</h1>
     </div>
    
