--- a/static/styles/forget_password.css
+++ b/static/styles/forget_password.css
@@ -1,4 +1,7 @@
 /* Forgot Password CSS */
+body {
+  background-color: #edf1d6;
+}
 
 #body-container {
   margin: 0;
@@ -9,7 +12,6 @@
   justify-content: center;
   width: 100vw;
   height: 100vh;
-  background-color: #edf1d6;
 }
 
 #forgot-password {
