link the pricing pages

--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -30,7 +30,7 @@
 
             <details>
                 <summary>How do I sign up as an instructor?</summary>
-                <p>Sign up today by creating an account and then following our <a href="pricing.html">pricing page</a>! All our plans are features are laid out here.</p>
+                <p>Sign up today by creating an account and then following our <a href="/pricing">pricing page</a>! All our plans are features are laid out here.</p>
             </details>
 
             <details>
