--- a/static/styles/course_order_placement.css
+++ b/static/styles/course_order_placement.css
@@ -1,6 +1,7 @@
 body {
     background-color: #f9f9f9;
     padding-top: 60px;
+    text-align: center;
 }
 
 .course-container {
@@ -10,6 +11,20 @@ body {
     padding: 40px;
     max-width: 800px;
     margin: 20px auto;
+}
+
+#course-image {
+    display: block;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+
+.payment-image{
+    height: 1.25rem;
 }
 
 .course-order-placement {
@@ -34,4 +49,9 @@ h3 {
     padding: 10px 20px;
     cursor: pointer;
     margin-bottom: 20px;
+}
+
+#cancel-button {
+    background-color: beige;
+    color: #609966;
 }
