--- a/templates/add_course.html
+++ b/templates/add_course.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="/static/styles/header.css" />
   <link rel="stylesheet" href="/static/general.css">
   <link rel="stylesheet" href="/static/styles/add_course.css" />
-  <title>Home</title>
+  <title>Add Course</title>
 </head>
 
 <body>
